--- a/src/assets/css/hero.css
+++ b/src/assets/css/hero.css
@@ -2,6 +2,7 @@
     background: url('../images/main.png') no-repeat center center/cover;
     height: 120vh;
     position: relative;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
   }
   
   .hero::before {
