--- a/src/assets/css/navbar.css
+++ b/src/assets/css/navbar.css
@@ -1,7 +1,11 @@
 .custom-navbar {
-    background-color: #000000ea;
-    padding: 1.5rem;
-  }
+  background-color: #000000ea;
+  position: sticky;
+  top: 0;
+  z-index: 1050;
+  transition: background-color 0.3s ease;
+}
+
   
   .custom-navbar .navbar-brand {
     font-size: 1.5rem;
@@ -10,3 +14,11 @@
   .custom-navbar .nav-link {
     font-size: 1.2rem;
   }
+
+  .sticky-wrapper {
+    position: sticky;
+    top: 0;
+    z-index: 1050;
+    background-color: #000000ea;
+  }
+  
