--- a/src/assets/css/contact.css
+++ b/src/assets/css/contact.css
@@ -1,7 +1,8 @@
 .contact-section {
     background-color: #f9f9f9;
-    padding: 4rem 1rem;
+    padding: 2rem 1rem 4rem 1rem;
   }
+  
   
   .contact-form {
     max-width: 700px;
