--- a/src/assets/css/aboutme.css
+++ b/src/assets/css/aboutme.css
@@ -41,7 +41,7 @@
   .carousel-image {
     width: 100%;
     height: 500px;
-    object-fit: cover; /* fills space, no black bars */
+    object-fit: cover;
     border-radius: 1rem;
     background-color: transparent;
     box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
